--- a/index.html
+++ b/index.html
@@ -31,32 +31,166 @@
     <link rel="stylesheet" href="./assets/style.css" />
     <title>📓  Javascrip quiz! 📓 </title>
   </head>
-  <div class="page-header">
-    <div class="container">
+
+  <header class="page-header">
+    <div class="container-xl">
         <div class="row">
-            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                <div class="page-caption">
-                    <h1 class="page-title">
-                    <img src="./assets/imgs/cooltext435258571717601.gif" alt="Burning letters, POP CULTURE QUIZ!">
-                    </h1>
+            <div class="col-md-10 mx-auto">
+                <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="0">
+                <!-- Carousel indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                </ol>   
+                <!-- Wrapper for carousel items -->
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <div class="thumb-wrapper">
+                                    <div class="img-box">
+                                        <img src="./assets/imgs/theoffice.png" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="thumb-content">
+                                        <h4>The Office</h4>
+                                        <p>A mockumentary on a group of typical office workers, where the workday consists of ego clashes, inappropriate behavior, and tedium.</p>
+                                        <a href="https://www.imdb.com/title/tt0386676/" target="_blank" class="btn btn-primary">More <i class="fa fa-angle-right"></i></a>
+                                    </div>						
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="thumb-wrapper">
+                                    <div class="img-box">
+                                        <img src="./assets/imgs/parksandrec.jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="thumb-content">
+                                        <h4>Parks and Recreation</h4>
+                                        <p>"Parks and Recreation" follows Leslie Knope as she goes about her job as an over-enthusiastic bureaucrat in the parks and recreation department.</p>
+                                        <a href="https://www.imdb.com/title/tt1266020/" target="_blank" class="btn btn-primary">More <i class="fa fa-angle-right"></i></a>
+                                    </div>						
+                                </div>
+                            </div>				
+                            <div class="col-sm-4">
+                                <div class="thumb-wrapper">
+                                    <div class="img-box">
+                                        <img src="./assets/imgs/brooklyn99.jpg" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="thumb-content">
+                                        <h4>Brooklyn Nine-Nine</h4>
+                                        <p>The series revolves around Jake Peralta, a talented yet immature NYPD detective in Brooklyn's 99th Precinct.</p>
+                                        <a href="https://www.imdb.com/title/tt2467372/" target="_blank" class="btn btn-primary">More <i class="fa fa-angle-right"></i></a>
+                                    </div>						
+                                </div>					
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <div class="thumb-wrapper">
+                                    <div class="img-box">
+                                        <img src="/examples/images/cities/kuala-lumpur.png" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="thumb-content">
+                                        <h4>Kuala Lumpur</h4>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam.</p>
+                                        <a href="#" class="btn btn-primary">More <i class="fa fa-angle-right"></i></a>
+                                    </div>						
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="thumb-wrapper">
+                                    <div class="img-box">
+                                        <img src="/examples/images/cities/agra.png" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="thumb-content">
+                                        <h4>Agra</h4>
+                                        <p>Vivamus fermentum in arcu in aliquam. Quisque aliqua porta odio in fringilla vivamus.</p>
+                                        <a href="#" class="btn btn-primary">More <i class="fa fa-angle-right"></i></a>
+                                    </div>						
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="thumb-wrapper">
+                                    <div class="img-box">
+                                        <img src="/examples/images/cities/dubai.png" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="thumb-content">
+                                        <h4>Dubai</h4>
+                                        <p>Convallis eget pretium eu, bibendum non leo. Proin susc ipit purus adipiscing dolor.</p>
+                                        <a href="#" class="btn btn-primary">More <i class="fa fa-angle-right"></i></a>
+                                    </div>						
+                                </div>					
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <div class="thumb-wrapper">
+                                    <div class="img-box">
+                                        <img src="/examples/images/cities/rio-de-janeiro.png" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="thumb-content">
+                                        <h4>Rio De Janeiro</h4>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam.</p>
+                                        <a href="#" class="btn btn-primary">More <i class="fa fa-angle-right"></i></a>
+                                    </div>						
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="thumb-wrapper">
+                                    <div class="img-box">
+                                        <img src="/examples/images/cities/giza.png" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="thumb-content">
+                                        <h4>Giza</h4>
+                                        <p>Vivamus fermentum in arcu in aliquam. Quisque aliqua porta odio in fringilla vivamus.</p>
+                                        <a href="#" class="btn btn-primary">More <i class="fa fa-angle-right"></i></a>
+                                    </div>						
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="thumb-wrapper">
+                                    <div class="img-box">
+                                        <img src="/examples/images/cities/sydney.png" class="img-fluid" alt="">
+                                    </div>
+                                    <div class="thumb-content">
+                                        <h4>Sydney</h4>
+                                        <p>Convallis eget pretium eu, bibendum non leo. Proin susc ipit purus adipiscing dolor.</p>
+                                        <a href="#" class="btn btn-primary">More <i class="fa fa-angle-right"></i></a>
+                                    </div>						
+                                </div>					
+                            </div>
+                        </div>
+                    </div>
                 </div>
+                <!-- Carousel controls -->
+                <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+                    <i class="fa fa-angle-left"></i>
+                </a>
+                <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+                    <i class="fa fa-angle-right"></i>
+                </a>
+            </div>
             </div>
         </div>
     </div>
-</div>
+  </header>
 <!-- /.page-header-->
+<body>
 <div class="card-section">
-    <div class="container rounded-cicrle">
-        <div class="card-block bg-dark mb30">
+        <div class="card-block mb30">
             <div class="row">
                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                     <!-- section-title -->
                     <div class="section-title mb-0">
                         <body>
-                            <div class="wrapper">
+                            <div class="wrapper tv-background text-white">
                                 <div class="wrap" id="q1">
                                     <div class="text-center pb-4">
-                                        <div class="h5 font-weight-bold"><span id="number"> </span>1 of 3 </div>
+                                        <div class="h5 font-weight-bold text-white"><span id="number"> </span>1 of 3 </div>
                                     </div>
                                     <div class="h4 font-weight-bold"> 1. Which pairing below was a couple in any season of the hit show "The Office"?</div>
                                     <div class="pt-4">
@@ -112,13 +246,23 @@
                               integrity="sha256-EfJOqCcshFS/2TxhArURu3Wn8b/XDA4fbPWKSwZ+1B8=" 
                               crossorigin="anonymous"></script>
                             <script src="./assets/script.js"></script>
-                          </body>
+                        </div>
+                        <!-- /.section-title -->
                     </div>
-                    <!-- /.section-title -->
                 </div>
             </div>
         </div>
-        </div>
-        </div>
-        </div>
+    </div>
+</body>
+        <script src="https://kit.fontawesome.com/9687d8ef59.js" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.6.4.min.js" 
+        integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" 
+        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" 
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
+        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.7/dayjs.min.js" 
+        integrity="sha256-EfJOqCcshFS/2TxhArURu3Wn8b/XDA4fbPWKSwZ+1B8=" 
+        crossorigin="anonymous"></script>
+      <script src="./assets/script.js"></script>
 </html>
