new stylling added

--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
   </head>
 
   <header class="page-header">
+    <header>
+        <!-- Background image -->
+        <div class="p-5 text-center bg-image image-class-header">
+            <div class="d-flex justify-content-center align-items-center h-100">
+              <div class="text-white">
+                <div class="mb-3"><img src="./assets/imgs/popculturetitle.png" class="pop-title"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Background image -->
+      </header>
     <div class="container-xl">
         <div class="row">
             <div class="col-md-10 mx-auto">
@@ -232,7 +244,7 @@
                                             <label class="options">Ram Nath Kovind <input type="radio" name="radio"> <span class="checkmark"></span> </label> 
                                         </form>
                                     </div>
-                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back2"> <span class="fas fa-arrow-left pr-2"></span>Previous </button> <button class="btn btn-primary" id="next3">Next <span class="fas fa-arrow-right"></span> </button> </div>
+                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back2"> <span class="fas fa-arrow-left pr-1"></span>Previous </button> <button class="btn btn-primary" id="next3">Next <span class="fas fa-arrow-right"></span> </button> </div>
                                 </div>
                                 <div class="wrap" id="q4">
                                     <div class="text-center pb-4">
@@ -247,7 +259,7 @@
                                             <label class="options">Ram Nath Kovind <input type="radio" name="radio"> <span class="checkmark"></span> </label> 
                                         </form>
                                     </div>
-                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back3"> <span class="fas fa-arrow-left pr-3"></span>Previous </button> <button class="btn btn-primary" id="next4">Next <span class="fas fa-arrow-right"></span> </button> </div>
+                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back3"> <span class="fas fa-arrow-left pr-1"></span>Previous </button> <button class="btn btn-primary" id="next4">Next <span class="fas fa-arrow-right"></span> </button> </div>
                                 </div>
                                 <div class="wrap" id="q5">
                                     <div class="text-center pb-4">
@@ -262,7 +274,7 @@
                                             <label class="options">Ram Nath Kovind <input type="radio" name="radio"> <span class="checkmark"></span> </label> 
                                         </form>
                                     </div>
-                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back4"> <span class="fas fa-arrow-left pr-4"></span>Previous </button> <button class="btn btn-primary" id="next5">Next <span class="fas fa-arrow-right"></span> </button> </div>
+                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back4"> <span class="fas fa-arrow-left pr-1"></span>Previous </button> <button class="btn btn-primary" id="next5">Next <span class="fas fa-arrow-right"></span> </button> </div>
                                 </div>
                                 <div class="wrap" id="q6">
                                     <div class="text-center pb-4">
@@ -277,7 +289,7 @@
                                             <label class="options">Ram Nath Kovind <input type="radio" name="radio"> <span class="checkmark"></span> </label> 
                                         </form>
                                     </div>
-                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back5"> <span class="fas fa-arrow-left pr-5"></span>Previous </button> <button class="btn btn-primary" id="next6">Next <span class="fas fa-arrow-right"></span> </button> </div>
+                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back5"> <span class="fas fa-arrow-left pr-1"></span>Previous </button> <button class="btn btn-primary" id="next6">Next <span class="fas fa-arrow-right"></span> </button> </div>
                                 </div>
                                 <div class="wrap" id="q7">
                                     <div class="text-center pb-4">
@@ -292,7 +304,7 @@
                                             <label class="options">Ram Nath Kovind <input type="radio" name="radio"> <span class="checkmark"></span> </label> 
                                         </form>
                                     </div>
-                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back6"> <span class="fas fa-arrow-left pr-6"></span>Previous </button> <button class="btn btn-primary" id="next7">Next </button> </div>
+                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back6"> <span class="fas fa-arrow-left pr-1"></span>Previous </button> <button class="btn btn-primary" id="next7">Next <span class="fas fa-arrow-right"></span> </button> </div>
                                 </div>
                                 <div class="wrap" id="q8">
                                     <div class="text-center pb-4">
@@ -307,7 +319,7 @@
                                             <label class="options">Ram Nath Kovind <input type="radio" name="radio"> <span class="checkmark"></span> </label> 
                                         </form>
                                     </div>
-                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back7"> <span class="fas fa-arrow-left pr-7"></span>Previous </button> <button class="btn btn-primary" id="next8">Next </button> </div>
+                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back7"> <span class="fas fa-arrow-left pr-1"></span>Previous </button> <button class="btn btn-primary" id="next8">Next <span class="fas fa-arrow-right"></span> </button> </div>
                                 </div>
                                 <div class="wrap" id="q9">
                                     <div class="text-center pb-4">
@@ -322,7 +334,7 @@
                                             <label class="options">Ram Nath Kovind <input type="radio" name="radio"> <span class="checkmark"></span> </label> 
                                         </form>
                                     </div>
-                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back8"> <span class="fas fa-arrow-left pr-8"></span>Previous </button> <button class="btn btn-primary" id="next9">Next </button> </div>
+                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back8"> <span class="fas fa-arrow-left pr-1"></span>Previous </button> <button class="btn btn-primary" id="next9">Next <span class="fas fa-arrow-right"></span> </button> </div>
                                 </div>
                                 <div class="wrap" id="q10">
                                     <div class="text-center pb-4">
@@ -337,7 +349,7 @@
                                             <label class="options">Ram Nath Kovind <input type="radio" name="radio"> <span class="checkmark"></span> </label> 
                                         </form>
                                     </div>
-                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back9"> <span class="fas fa-arrow-left pr-9"></span>Previous </button> <button class="btn btn-primary" id="next10">Next </button> </div>
+                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back9"> <span class="fas fa-arrow-left pr-1"></span>Previous </button> <button class="btn btn-primary" id="next10">Next <span class="fas fa-arrow-right"></span> </button> </div>
                                 </div>
                                 <div class="wrap" id="q11">
                                     <div class="text-center pb-4">
@@ -352,7 +364,7 @@
                                             <label class="options">Ram Nath Kovind <input type="radio" name="radio"> <span class="checkmark"></span> </label> 
                                         </form>
                                     </div>
-                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back10"> <span class="fas fa-arrow-left pr-10"></span>Previous </button> <button class="btn btn-primary" id="next11">Next </button> </div>
+                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back10"> <span class="fas fa-arrow-left pr-1"></span>Previous </button> <button class="btn btn-primary" id="next11">Next <span class="fas fa-arrow-right"></span> </button> </div>
                                 </div>
                                 <div class="wrap" id="q12">
                                     <div class="text-center pb-4">
@@ -367,7 +379,7 @@
                                             <label class="options">Ram Nath Kovind <input type="radio" name="radio"> <span class="checkmark"></span> </label> 
                                         </form>
                                     </div>
-                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back11"> <span class="fas fa-arrow-left pr-11"></span>Previous </button> <button class="btn btn-primary" id="next12">Next </button> </div>
+                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back11"> <span class="fas fa-arrow-left pr-1"></span>Previous </button> <button class="btn btn-primary" id="next12">Next <span class="fas fa-arrow-right"></span> </button> </div>
                                 </div>
                                 <div class="wrap" id="q13">
                                     <div class="text-center pb-4">
@@ -382,7 +394,7 @@
                                             <label class="options">Ram Nath Kovind <input type="radio" name="radio"> <span class="checkmark"></span> </label> 
                                         </form>
                                     </div>
-                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back12"> <span class="fas fa-arrow-left pr-12"></span>Previous </button> <button class="btn btn-primary" id="next13">Next </button> </div>
+                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back12"> <span class="fas fa-arrow-left pr-1"></span>Previous </button> <button class="btn btn-primary" id="next13">Next <span class="fas fa-arrow-right"></span> </button> </div>
                                 </div>
                                 <div class="wrap" id="q14">
                                     <div class="text-center pb-4">
@@ -397,7 +409,7 @@
                                             <label class="options">Ram Nath Kovind <input type="radio" name="radio"> <span class="checkmark"></span> </label> 
                                         </form>
                                     </div>
-                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back13"> <span class="fas fa-arrow-left pr-13"></span>Previous </button> <button class="btn btn-primary" id="next14">Next </button> </div>
+                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back13"> <span class="fas fa-arrow-left pr-1"></span>Previous </button> <button class="btn btn-primary" id="next14">Next <span class="fas fa-arrow-right"></span> </button> </div>
                                 </div>
                                 <div class="wrap" id="q15">
                                     <div class="text-center pb-4">
@@ -412,11 +424,10 @@
                                             <label class="options">Ram Nath Kovind <input type="radio" name="radio"> <span class="checkmark"></span> </label> 
                                         </form>
                                     </div>
-                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back14"> <span class="fas fa-arrow-left pr-14"></span>Previous </button> <button class="btn btn-primary" id="next15">Submit </button> </div>
+                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back14"> <span class="fas fa-arrow-left pr-1"></span>Previous </button> <button class="btn btn-primary" id="next15">Submit </button> </div>
                                 </div>
                             </div>
                         </div>
-                        <!-- /.section-title -->
                     </div>
                 </div>
             </div>
