--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css" />
-    <title>📓  Javascrip quiz! 📓 </title>
+    <title>📓  Pop Culture Quiz! 📓 </title>
   </head>
 
   <header class="page-header">
