photo and resizing and styling

--- a/index.html
+++ b/index.html
@@ -204,12 +204,13 @@
                                     <div class="text-center pb-4">
                                         <div class="h5 font-weight-bold text-white"><span id="number">IT'S QUIZ TIME!! </span> </div>
                                     </div>
-                                    <div class="h4 font-weight-bold"> TRY YOUR HAND AT POP CULTURE KNOWLEDGE!</div>
+                                    <div class="h4 font-weight-bold text-center"> TRY YOUR HAND AT POP CULTURE KNOWLEDGE!</div>
                                     <div class="pt-4 text-center">
                                         This is all in good fun!
                                         See how you stack up against others that are wanting to try their hand with Pop Culture knowledge!
                                     </div>
                                     <div class="d-flex justify-content-center pt-2"> <button class="btn btn-primary" id="start1">START!<span class="fas fa-arrow-right"></span> </button> </div>
+                                    <img class="office-image img-fluid rounded mx-auto d-block m-t-1" src="./assets/imgs/officedancing.gif" alt="the office dancing scene"/>
                                 </div>
                                 <div class="wrap" id="q1">
                                     <div class="text-center pb-4">
