--- a/index.html
+++ b/index.html
@@ -436,8 +436,9 @@
                                             <label class="options">Ben Wyatt <input type="radio" name="radio"> <span class="checkmark"></span> </label> 
                                         </form>
                                     </div>
-                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back14"> <span class="fas fa-arrow-left pr-1"></span>Previous </button> <button class="btn btn-primary" id="next15">Submit </button> </div>
+                                    <div class="d-flex justify-content-end pt-2"> <button class="btn btn-primary mx-3" id="back14"> <span class="fas fa-arrow-left pr-1"></span>Previous </button> <button class="btn btn-primary" id="submit">Submit </button> </div>
                                 </div>
+                                <div id="results"></div>
                             </div>
                         </div>
                     </div>
