--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>📓  Pop Culture Quiz! 📓 </title>
   </head>
 
@@ -274,5 +274,5 @@
         <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.7/dayjs.min.js" 
         integrity="sha256-EfJOqCcshFS/2TxhArURu3Wn8b/XDA4fbPWKSwZ+1B8=" 
         crossorigin="anonymous"></script>
-      <script src="./assets/script.js"></script>
+      <script src="./assets/js/script.js"></script>
 </html>
