--- a/unusedhtml.html
+++ b/unusedhtml.html
@@ -30,7 +30,7 @@
     <div class="text-center pb-4">
         <div class="h5 font-weight-bold"> <span id="number"> </span>2 of 15 </div>
     </div>
-    <div class="h4 font-weight-bold"> 2. In the hit show "Parks and Recreation", what is the name of the strong lead who's determination is unbreakable?!</div>
+    <div class="h4 font-weight-bold"> 2. In the hit show Parks and Recreation, what is the name of the strong lead who's determination is unbreakable?!</div>
     <div class="pt-4">
         <form> 
             <label class="options">Lester Knumpf <input type="radio" name="radio"> <span class="checkmark"></span> </label> 
@@ -45,7 +45,7 @@
     <div class="text-center pb-4">
         <div class="h5 font-weight-bold"> <span id="number"> </span>3 of 15 </div>
     </div>
-    <div class="h4 font-weight-bold"> 3. In "Brooklyn Nine-Nine", Jake Peralta has a lot of good friends within the precinct, BUT he has one and only BEST Friend. Who is his "Fancy Bedste Venner"?</div>
+    <div class="h4 font-weight-bold"> 3. In Brooklyn Nine-Nine, Jake Peralta has a lot of good friends within the precinct, BUT he has one and only BEST Friend. Who is his Fancy Bedste Venner?</div>
     <div class="pt-4">
         <form> 
             <label class="options">Captain Jeffords <input type="radio" name="radio"> <span class="checkmark"></span> </label> 
@@ -60,7 +60,7 @@
     <div class="text-center pb-4">
         <div class="h5 font-weight-bold"> <span id="number"> </span>4 of 15 </div>
     </div>
-    <div class="h4 font-weight-bold"> 4. In the hit show "The Mandalorian" how does one become "the rightful ruler of Mandalore"?</div>
+    <div class="h4 font-weight-bold"> 4. In the hit show The Mandalorian how does one become the rightful ruler of Mandalore?</div>
     <div class="pt-4">
         <form> 
             <label class="options">By democratic means! <input type="radio" name="radio"> <span class="checkmark"></span> </label> 
