questions now populating

--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
     </div>
   </header>
 <!-- /.page-header-->
-<body>
-<div class="card-section">
+<body onload="NextQuestion(0)">
+    <div class="card-section">
         <div class="card-block mb30">
             <div class="row">
                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
