--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="./assets/css/countdown.css" /> -->
     <link rel="stylesheet" href="./assets/css/index.css" />
     <title>📓  Pop Culture Quiz! 📓 </title>
   </head>
@@ -222,6 +223,10 @@
                 <h1>Score : <span id="player-score"></span> / 10</h1>
                 <h1> Question : <span id="question-number"></span> / 10</h1>
             </div>
+            <div class="widget-wrap">
+                <h1>COUNTDOWN TIMER</h1>
+                <div id="demo"></div>
+            </div>
             <div class="game-question-container">
                 <h1 id="display-question"></h1>
             </div>
@@ -254,7 +259,6 @@
             <div class="next-button-container">
                 <button onclick="handleNextQuestion()">Next Question</button>
             </div>
-
         </div>
                             </div>
                         </div>
@@ -274,5 +278,5 @@
         <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.7/dayjs.min.js" 
         integrity="sha256-EfJOqCcshFS/2TxhArURu3Wn8b/XDA4fbPWKSwZ+1B8=" 
         crossorigin="anonymous"></script>
-      <script src="./assets/js/index.js"></script>
+        <script src="./assets/js/index.js"></script>
 </html>
