high scores and homepage buttons and redirects

--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
   </header>
 <!-- /.page-header-->
 <body onload="NextQuestion(0)">
-    <div class="card-section">
+    <div class="card-section text-center">
+       <a href="/highscore.html"><button type="button" class=" col-2 btn btn-danger">📋 High Scores! 📋</button></a>
         <div class="card-block mb30">
             <div class="row">
                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
