--- a/highscore.html
+++ b/highscore.html
@@ -49,7 +49,8 @@
   </header>
 <!-- /.page-header-->
 <body onload="NextQuestion(0)">
-    <div class="card-section">
+    <div class="card-section text-center pt-5">
+      <a href="/index.html"><button type="button" class=" col-2 btn btn-danger">🏠 Homepage 🏠 </button></a>
         <div class="card-block mb30">
             <div class="row">
                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
