high scores edits

--- a/highscore.html
+++ b/highscore.html
@@ -69,29 +69,29 @@
                                             </thead>
                                             <tbody>
                                               <tr>
-                                                <th scope="row">1</th>
-                                                <td></td>
-                                                <td></td>
+                                                <th scope="row" id="row1">1</th>
+                                                <td id="row1initials"></td>
+                                                <td id="row1score"></td>
                                               </tr>
                                               <tr>
-                                                <th scope="row">2</th>
-                                                <td></td>
-                                                <td></td>
+                                                <th scope="row" id="row2">2</th>
+                                                <td id="row2initials"></td>
+                                                <td id="row2score"></td>
                                               </tr>
                                               <tr>
-                                                <th scope="row">3</th>
-                                                <td></td>
-                                                <td></td>
+                                                <th scope="row" id="row3">3</th>
+                                                <td id="row3initials"></td>
+                                                <td id="row3score"></td>
                                               </tr>
                                               <tr>
-                                                <th scope="row">4</th>
-                                                <td></td>
-                                                <td></td>
+                                                <th scope="row" id="row4">4</th>
+                                                <td id="row4initials"></td>
+                                                <td id="row4score"></td>
                                               </tr>
                                               <tr>
-                                                <th scope="row">5</th>
-                                                <td></td>
-                                                <td></td>
+                                                <th scope="row" id="row5">5</th>
+                                                <td id="row5score"></td>
+                                                <td id="row5initials"></td>
                                               </tr>
                                             </tbody>
                                           </table>
