--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
                     <p>Attempts : 10</p>
                     <p>Wrong Answers : <span id="wrong-answers"></span></p>
                     <p>Right Answers : <span id="right-answers"></span></p>
+                    <p>Initials : <span id="Initials"></span></p>
                     <p>Grade : <span id="grade-percentage"></span>%</p>
                     <p ><span id="remarks"></span></p>
                 </div>
@@ -223,6 +224,7 @@
             <div class="game-details-container">
                 <h1>Score : <span id="player-score"></span> / 10</h1>
                 <h1> Question : <span id="question-number"></span> / 10</h1>
+                <h1>Initials : <span id="Initials" type="text"></span></h1>
             </div>
             <div class="widget-wrap">
                 <h1>COUNTDOWN TIMER</h1>
