added in correct source path

--- a/variousquizzes/parksandrec.html
+++ b/variousquizzes/parksandrec.html
@@ -29,7 +29,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="./assets/css/countdown.css" /> -->
-    <link rel="stylesheet" href="./assets/css/index.css" />
+    <link rel="stylesheet" href="../assets/css/index.css" />
     <title>📓  Pop Culture Quiz! 📓 </title>
   </head>
 
@@ -39,7 +39,7 @@
         <div class="p-5 text-center bg-image image-class-header">
             <div class="d-flex justify-content-center align-items-center h-100">
               <div class="text-white">
-                <div class="mb-3"><img src="./assets/imgs/popculturetitle.png" class="pop-title"></div>
+                <div class="mb-3"><img src="../assets/imgs/popculturetitle.png" class="pop-title"></div>
               </div>
             </div>
           </div>
@@ -281,5 +281,5 @@
         <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.7/dayjs.min.js" 
         integrity="sha256-EfJOqCcshFS/2TxhArURu3Wn8b/XDA4fbPWKSwZ+1B8=" 
         crossorigin="anonymous"></script>
-        <script src="./assets/js/index.js"></script>
+        <script src="../assets/js/parks.js"></script>
 </html>
